Some workaround over failing error handling

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ flask-sqlalchemy = "*"
 flask-jwt-extended = "*"
 flask-bcrypt = "*"
 flask-cors = "*"
+flask-marshmallow = "*"
+marshmallow-sqlalchemy = "*"
 
 [requires]
 python_version = "3.8"
